<resources>
    <string name="app_name">Imazine</string>
    <string name="version_number">Version %1$s</string>
    <string name="home_something_wrong">Something wrong happened…</string>
    <string name="retry">Retry</string>
    <string name="home_latest_section_title">Latest Posts</string>
    <string name="home_all_post_section_title">All Posts</string>
    <string name="load_error">Can\'t load content</string>
    <string name="login_error">Wrong Username/Password</string>
    <string name="cd_navigate_up">Navigate up</string>
    <string name="hint_npm">NPM</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="hint_login">Gunakan akun apps.himatif.org untuk melanjutkan</string>
    <string name="settings">Settings</string>
    <string name="cd_iv_latest_post">Latest Post Image</string>
    <string name="lbl_latest_post">Latest Post</string>
    <string name="lbl_all_posts">All Posts</string>
    <string name="cd_iv_post_img">Post Image</string>
    <string name="btn_retry">Retry</string>
    <string name="about">About</string>
    <string name="app_description">Himatif Imazine (Informatics Magazine) Apps merupakan sebuah platform media yang menyajikan sebuah artikel terkait bidang teknologi informasi, berita dunia, fakta unik dan menarik, serta menyajikan rangkaian informasi program kerja di Badan Eksekutif Himatif FMIPA Unpad.\n\nDengan berbagai perubahan untuk versi saat ini, diharapkan memberikan kemudahan untuk khalayak umum mendapatkan sebuah informasi yang terbaru.</string>
    <string name="lbl_social_media">Our Social Media</string>
    <string name="social_media">himatifunpad</string>
    <string name="website">himatif.fmipa.unpad.ac.id</string>
    <string name="email">himatifunpad@gmail.com</string>
    <string name="prefs_general">General</string>
    <string name="prefs_app_theme">App theme</string>
    <string name="prefs_app_theme_light">Light</string>
    <string name="prefs_app_theme_dark">Dark</string>
    <string name="prefs_app_theme_system">Follow system</string>
    <string name="prefs_notify_new_post">Notify on New Post</string>
    <string name="prefs_notify_new_post_on">You will be notified when a new article is posted</string>
    <string name="prefs_notify_new_post_off">You won\'t be notified when a new article is posted</string>
    <string name="prefs_logout">Logout</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_message_logout">Do you want to logout from Imazine ?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="new_post_notif_channel_id">new_post</string>
</resources>