<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <TextView
      android:id="@+id/hero"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_xxxlarge"
      android:text="@string/app_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/TextAppearance.Imazine.Brand"
      />

  <TextView
      android:id="@+id/hint_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_xxlarge"
      android:alpha="?attr/emphasisMediumAlpha"
      android:text="@string/hint_login"
      app:layout_constraintBottom_toTopOf="@id/btn_login"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tf_password"
      style="@style/TextAppearance.Imazine.Caption"
      />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/dimen_medium"
      android:layout_marginTop="@dimen/dimen_small"
      android:padding="@dimen/dimen_normal"
      android:text="@string/btn_login"
      app:layout_constraintTop_toBottomOf="@id/hint_login"
      />

  <com.google.android.material.progressindicator.LinearProgressIndicator
      android:id="@+id/progress_bar"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dimen_normal"
      android:indeterminate="true"
      android:visibility="gone"
      app:layout_constraintTop_toTopOf="parent"
      />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tf_npm"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/dimen_medium"
      android:layout_marginTop="@dimen/dimen_xlarge"
      app:layout_constraintTop_toBottomOf="@id/hero"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_npm"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tf_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/dimen_medium"
      android:layout_marginTop="@dimen/dimen_slarge"
      app:layout_constraintTop_toBottomOf="@id/tf_npm"
      app:endIconMode="password_toggle"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        />
  </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>